--- a/module_start/src/main/res/layout/fm_fourth_personal.xml
+++ b/module_start/src/main/res/layout/fm_fourth_personal.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/c_10"
+    android:background="@color/setting_gap"
     android:orientation="vertical">
 
 
@@ -10,6 +10,6 @@
         android:id="@+id/lv_setting"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#fff" />
+        android:background="@color/white" />
 
 </LinearLayout>
