--- a/module_api/src/main/res/layout/api_activity_iv_scale_type.xml
+++ b/module_api/src/main/res/layout/api_activity_iv_scale_type.xml
@@ -22,7 +22,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/attrs_scale_type" />
+                android:src="@mipmap/api_attrs_scale_type" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -41,7 +41,7 @@
                 android:layout_width="@dimen/iv_scale_type_height"
                 android:layout_height="@dimen/iv_scale_type_height"
                 android:scaleType="matrix"
-                android:src="@mipmap/attrs_scale_type" />
+                android:src="@mipmap/api_attrs_scale_type" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -60,7 +60,7 @@
                 android:layout_width="@dimen/iv_scale_type_height"
                 android:layout_height="@dimen/iv_scale_type_height"
                 android:scaleType="center"
-                android:src="@mipmap/attrs_scale_type" />
+                android:src="@mipmap/api_attrs_scale_type" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -79,7 +79,7 @@
                 android:layout_width="@dimen/iv_scale_type_height"
                 android:layout_height="@dimen/iv_scale_type_height"
                 android:scaleType="centerCrop"
-                android:src="@mipmap/attrs_scale_type" />
+                android:src="@mipmap/api_attrs_scale_type" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -99,7 +99,7 @@
                 android:layout_width="@dimen/iv_scale_type_height"
                 android:layout_height="@dimen/iv_scale_type_height"
                 android:scaleType="centerInside"
-                android:src="@mipmap/attrs_scale_type" />
+                android:src="@mipmap/api_attrs_scale_type" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -119,7 +119,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:scaleType="fitXY"
-                android:src="@mipmap/attrs_scale_type" />
+                android:src="@mipmap/api_attrs_scale_type" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -138,7 +138,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:scaleType="fitStart"
-                android:src="@mipmap/attrs_scale_type" />
+                android:src="@mipmap/api_attrs_scale_type" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -158,7 +158,7 @@
                 android:layout_width="@dimen/iv_scale_type_height"
                 android:layout_height="@dimen/iv_scale_type_height"
                 android:scaleType="fitCenter"
-                android:src="@mipmap/attrs_scale_type" />
+                android:src="@mipmap/api_attrs_scale_type" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -178,7 +178,7 @@
                 android:layout_width="@dimen/iv_scale_type_height"
                 android:layout_height="@dimen/iv_scale_type_height"
                 android:scaleType="fitEnd"
-                android:src="@mipmap/attrs_scale_type" />
+                android:src="@mipmap/api_attrs_scale_type" />
 
             <TextView
                 android:layout_width="wrap_content"
