1.断点下载示例添加2.sp工具类单例化

--- a/module_apis/src/main/res/layout/apis_fragment_test_retrofit.xml
+++ b/module_apis/src/main/res/layout/apis_fragment_test_retrofit.xml
@@ -113,6 +113,25 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/bt_download_http"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="断点续传(Http)" />
+
+                <Button
+                    android:id="@+id/bt_go_on_download"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="下载" />
+            </LinearLayout>
 
         </LinearLayout>
 
