--- a/module_apis/src/main/res/layout/apis_fragment_test_retrofit.xml
+++ b/module_apis/src/main/res/layout/apis_fragment_test_retrofit.xml
@@ -133,6 +133,27 @@
                     android:text="下载" />
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/bt_nest_request"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="嵌套请求" />
+
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/iv_temp"
+                android:layout_width="150dp"
+                android:layout_height="50dp"
+                android:background="#3333" />
+
+
         </LinearLayout>
 
         <TextView
