--- a/module_api/src/main/res/layout/api_fm_demo_tool_bar.xml
+++ b/module_api/src/main/res/layout/api_fm_demo_tool_bar.xml
@@ -13,6 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorAccent"
+            android:fitsSystemWindows="true"
             app:layout_constraintTop_toTopOf="parent"
             app:navigationIcon="@drawable/iconfont_close_32"
             app:title="标题"
