--- a/module_pj_wanandroid/src/main/res/layout/wanandroid_adapter_item_knoledge_column_list.xml
+++ b/module_pj_wanandroid/src/main/res/layout/wanandroid_adapter_item_knoledge_column_list.xml
@@ -32,8 +32,8 @@
             android:id="@+id/tv_chapter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:lastBaselineToBottomHeight="@+id/tv_author"
             android:text="四大组件/Activity"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_author"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/tv_author" />
 
