--- a/module_api/src/main/res/layout/api_activity_room.xml
+++ b/module_api/src/main/res/layout/api_activity_room.xml
@@ -8,21 +8,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <cc.catface.base.utils.android.common_title.TitleFontAwesome
-            android:id="@+id/tfa_room"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
 
         <LinearLayout
             android:id="@+id/ll_query"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@+id/tfa_room">
+            app:layout_constraintTop_toTopOf="parent">
 
             <Button
                 android:id="@+id/bt_query_all"
