--- a/module_api/src/main/res/layout/api_activity_vibrator_camera.xml
+++ b/module_api/src/main/res/layout/api_activity_vibrator_camera.xml
@@ -8,15 +8,9 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-
-        <cc.catface.base.utils.android.common_title.TitleFontAwesome
-            android:id="@+id/tfa_camera"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
