--- a/module_pj_iflytek/src/main/res/layout/activity_aiui.xml
+++ b/module_pj_iflytek/src/main/res/layout/activity_aiui.xml
@@ -35,5 +35,12 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/bt_clear" />
 
+        <Button
+            android:id="@+id/bt_send_mail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="测试邮件发送"
+            app:layout_constraintTop_toBottomOf="@+id/bt_clear" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
