--- a/module_start/src/main/res/layout/start_fm_mess.xml
+++ b/module_start/src/main/res/layout/start_fm_mess.xml
@@ -14,6 +14,7 @@
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:background="#df00"
+            android:fitsSystemWindows="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
