--- a/app_base/src/main/res/menu/base_menu.xml
+++ b/app_base/src/main/res/menu/base_menu.xml
@@ -5,6 +5,7 @@
     <item
         android:id="@+id/menu_search"
         android:title="搜索"
+        android:visible="false"
         app:actionViewClass="android.widget.SearchView"
         app:showAsAction="always" />
 
@@ -12,6 +13,7 @@
         android:id="@+id/menu_normal"
         android:orderInCategory="80"
         android:title="删除"
+        android:visible="false"
         app:showAsAction="never" />
 
 
@@ -19,6 +21,7 @@
         android:id="@+id/menu_plus_1"
         android:orderInCategory="90"
         android:title="编辑"
+        android:visible="false"
         app:showAsAction="never" />
 
     <item
@@ -26,6 +29,7 @@
         android:icon="@mipmap/toast_ic_default_check_white_96"
         android:orderInCategory="100"
         android:title="下载"
+        android:visible="false"
         app:showAsAction="never" />
 
 </menu>
