--- a/module_apis/src/main/res/layout/apis_activity_demo_flow_layout.xml
+++ b/module_apis/src/main/res/layout/apis_activity_demo_flow_layout.xml
@@ -9,28 +9,26 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <cc.catface.base.utils.android.common_title.TitleFontAwesome
-            android:id="@+id/tfa"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+        <include
+            android:id="@+id/i_tb_apis"
+            layout="@layout/apis_toolbar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ScrollView
             style="@style/scrollbar_scroll_bar_style_default"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tfa">
+            app:layout_constraintTop_toBottomOf="@+id/i_tb_apis">
 
             <com.nex3z.flowlayout.FlowLayout
                 android:id="@+id/flowlayout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:background="#1001"
                 android:padding="10dp"
                 app:flChildSpacing="8dp"
