--- a/module_apis/src/main/res/layout/apis_activity_demo_sticky_list.xml
+++ b/module_apis/src/main/res/layout/apis_activity_demo_sticky_list.xml
@@ -8,10 +8,9 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <cc.catface.base.utils.android.common_title.TitleFontAwesome
-            android:id="@+id/tfa"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+        <include
+            android:id="@+id/i_tb_apis"
+            layout="@layout/apis_toolbar" />
 
         <se.emilsjolander.stickylistheaders.StickyListHeadersListView
             android:id="@+id/slhlv"
