--- a/module_apis/src/main/res/layout/apis_activity_memo.xml
+++ b/module_apis/src/main/res/layout/apis_activity_memo.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data />
 
@@ -8,7 +9,12 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-
+        <include
+            android:id="@+id/i_tb_apis"
+            layout="@layout/apis_toolbar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
         <cc.catface.base.utils.android.common_title.TitleFontAwesome
             android:id="@+id/tfa_memo"
             android:layout_width="match_parent"
