--- a/module_apis/src/main/res/layout/apis_activity_server.xml
+++ b/module_apis/src/main/res/layout/apis_activity_server.xml
@@ -8,18 +8,8 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <cc.catface.base.utils.android.common_title.TitleFontAwesome
-            android:id="@+id/tfa"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:id="@+id/tv_ip"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:gravity="center"
-            android:text="本机ip+端口号"
-            android:textSize="32sp" />
+        <include
+            android:id="@+id/i_tb_apis"
+            layout="@layout/apis_toolbar" />
     </LinearLayout>
 </layout>
