--- a/module_apis/src/main/res/layout/apis_fragment_test_retrofit.xml
+++ b/module_apis/src/main/res/layout/apis_fragment_test_retrofit.xml
@@ -8,6 +8,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <include
+            android:id="@+id/i_tb_test_retrofit"
+            layout="@layout/apis_toolbar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <LinearLayout
             android:id="@+id/ll_bt"
             android:layout_width="match_parent"
@@ -15,7 +22,7 @@
             android:background="#1f00"
             android:orientation="vertical"
             app:layout_constraintHeight_percent="0.5"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/i_tb_test_retrofit">
 
             <LinearLayout
                 android:layout_width="match_parent"
