--- a/module_pj_iflytek/src/main/res/layout/activity_aiui.xml
+++ b/module_pj_iflytek/src/main/res/layout/activity_aiui.xml
@@ -22,6 +22,13 @@
             android:text="清除"
             app:layout_constraintTop_toBottomOf="@+id/bt_start_aiui" />
 
+        <Button
+            android:id="@+id/bt_send_mail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="测试邮件发送"
+            app:layout_constraintTop_toBottomOf="@+id/bt_clear" />
+
         <TextView
             android:id="@+id/tv_result"
             android:layout_width="0dp"
@@ -33,14 +40,7 @@
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/bt_clear" />
-
-        <Button
-            android:id="@+id/bt_send_mail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="测试邮件发送"
-            app:layout_constraintTop_toBottomOf="@+id/bt_clear" />
+            app:layout_constraintTop_toBottomOf="@+id/bt_send_mail" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
