--- a/module_pj_wanandroid/src/main/res/layout/wanandroid_activity_main.xml
+++ b/module_pj_wanandroid/src/main/res/layout/wanandroid_activity_main.xml
@@ -10,13 +10,19 @@
         android:layout_height="match_parent"
         tools:context=".module.WanandroidMainActivity">
 
+        <include
+            android:id="@+id/i_tb_wanandroid"
+            layout="@layout/wanandroid_toolbar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/vp_wanandroid_main"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/i_tb_wanandroid" />
 
         <FrameLayout
             android:id="@+id/fl_wanandroid_main"
@@ -28,13 +34,16 @@
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_nav"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             app:itemBackground="@color/blue_title_bg"
             app:itemIconTint="@color/white"
             app:itemTextColor="@color/white"
+            app:labelVisibilityMode="labeled"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:menu="@menu/wanandroid_menu_bottom_nav" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
