--- a/module_pj_wanandroid/src/main/res/layout/wanandroid_activity_main.xml
+++ b/module_pj_wanandroid/src/main/res/layout/wanandroid_activity_main.xml
@@ -37,7 +37,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
+            android:shadowColor="@color/white"
             app:itemBackground="@color/blue_title_bg"
+            app:itemRippleColor="@color/white"
             app:itemTextColor="@color/white"
             app:labelVisibilityMode="labeled"
             app:layout_constraintBottom_toBottomOf="parent"
