--- a/module_pj_wanandroid/src/main/res/menu/wanandroid_menu_bottom_nav.xml
+++ b/module_pj_wanandroid/src/main/res/menu/wanandroid_menu_bottom_nav.xml
@@ -5,35 +5,35 @@
     <item
         android:id="@+id/bottom_nav_home"
         android:enabled="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/iconfont_aliyun_iot__zitibiaoti"
         android:title="首页"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/bottom_nav_knowledge"
         android:enabled="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/iconfont_aliyun_iot__lianjieliu"
         android:title="知识体系"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/bottom_nav_subscriptions"
         android:enabled="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/iconfont_aliyun_iot__icon_yulan"
         android:title="公众号"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/bottom_nav_navigation"
         android:enabled="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/iconfont_aliyun_iot__lumingpai"
         android:title="导航"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/bottom_nav_projects"
         android:enabled="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/iconfont_aliyun_iot__list"
         android:title="项目"
         app:showAsAction="ifRoom" />
 </menu>
