--- a/module_start/src/main/res/layout/start_activity_setting.xml
+++ b/module_start/src/main/res/layout/start_activity_setting.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data />
 
@@ -9,10 +10,16 @@
         android:background="@color/setting_gap"
         android:orientation="vertical">
 
+        <include
+            android:id="@+id/i_tb_start"
+            layout="@layout/start_toolbar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ListView
-            style="@style/scrollbar_scroll_bar_style_default"
             android:id="@+id/lv_version"
+            style="@style/scrollbar_scroll_bar_style_default"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white" />
