--- a/module_pj_showapi/src/main/res/layout/showapi_item_yy_joke_341_2.xml
+++ b/module_pj_showapi/src/main/res/layout/showapi_item_yy_joke_341_2.xml
@@ -1,35 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/cardView"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_margin="3dp"
-    app:cardElevation="1dp">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:layout_margin="3dp"
+        app:cardElevation="1dp">
 
-        <TextView
-            android:id="@+id/tv_joke_pic"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="我是图片的标题" />
+            android:orientation="vertical"
+            android:padding="16dp">
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:layout_margin="1dp"
-            android:background="#1111" />
+            <ImageView
+                android:id="@+id/iv_joke_pic"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scaleType="fitCenter"
+                android:src="@mipmap/ic_launcher" />
 
-        <ImageView
-            android:id="@+id/iv_joke_pic"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scaleType="fitCenter"
-            android:src="@mipmap/ic_launcher" />
-    </LinearLayout>
-</androidx.cardview.widget.CardView>
+            <TextView
+                android:id="@+id/tv_joke_pic"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="我是图片的标题" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:layout_margin="1dp"
+                android:background="#1111" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <data />
+</layout>
