--- a/module_pj_wanandroid/src/main/res/layout/wanandroid_adapter_item_projects_list.xml
+++ b/module_pj_wanandroid/src/main/res/layout/wanandroid_adapter_item_projects_list.xml
@@ -34,8 +34,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:ellipsize="end"
-            android:maxLines="1"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:singleLine="true"
             android:text="一款精致的玩Android客户端"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
