--- a/app_base/src/main/res/drawable/shape_package_indicator_normal.xml
+++ b/app_base/src/main/res/drawable/shape_package_indicator_normal.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval"
     android:useLevel="false">
-    <solid android:color="#fff" />
+    <solid android:color="#333" />
 
     <size
         android:width="20dp"
