--- a/module_api/src/main/res/layout/api_activity_demo_font.xml
+++ b/module_api/src/main/res/layout/api_activity_demo_font.xml
@@ -12,8 +12,9 @@
             android:id="@+id/tv_1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="20dp"
-            android:textSize="20sp"
+            android:padding="10dp"
+            android:text="@string/wzhzjqeds"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -22,8 +23,9 @@
             android:id="@+id/tv_2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="20dp"
-            android:textSize="20sp"
+            android:padding="10dp"
+            android:text="@string/wzhzjqeds"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_1" />
@@ -32,8 +34,9 @@
             android:id="@+id/tv_3"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="20dp"
-            android:textSize="20sp"
+            android:padding="10dp"
+            android:text="@string/wzhzjqeds"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_2" />
@@ -42,8 +45,9 @@
             android:id="@+id/tv_4"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="20dp"
-            android:textSize="20sp"
+            android:padding="10dp"
+            android:text="@string/wzhzjqeds"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_3" />
@@ -52,8 +56,9 @@
             android:id="@+id/tv_5"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="20dp"
-            android:textSize="20sp"
+            android:padding="10dp"
+            android:text="@string/wzhzjqeds"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_4" />
@@ -62,12 +67,45 @@
             android:id="@+id/tv_6"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="20dp"
-            android:textSize="20sp"
+            android:padding="10dp"
+            android:text="@string/wzhzjqeds"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_5" />
 
+        <TextView
+            android:id="@+id/tv_7"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="@string/wzhzjqeds"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_6" />
+
+        <TextView
+            android:id="@+id/tv_8"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="@string/wzhzjqeds"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_7" />
+
+        <TextView
+            android:id="@+id/tv_9"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="@string/wzhzjqeds"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_8" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
