--- a/module_api/src/main/res/layout/api_activity_eleme.xml
+++ b/module_api/src/main/res/layout/api_activity_eleme.xml
@@ -6,18 +6,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="10dp"
         android:orientation="vertical">
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/vp_eleme_pages"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_marginTop="10dp" />
+            android:layout_height="150dp" />
 
         <LinearLayout
             android:id="@+id/ll_eleme_points"
             android:layout_width="match_parent"
-            android:layout_height="20dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:gravity="center"
             android:orientation="horizontal" />
@@ -38,7 +38,7 @@
         <LinearLayout
             android:id="@+id/ll_text_points"
             android:layout_width="match_parent"
-            android:layout_height="20dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:gravity="center"
             android:orientation="horizontal" />
@@ -52,13 +52,16 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp">
+            android:layout_height="100dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp">
 
 
             <GridView
                 android:id="@+id/gv_single_page_multi_chosen"
                 android:layout_width="300dp"
-                android:layout_height="100dp"
+                android:layout_height="120dp"
+                android:layout_alignParentEnd="true"
                 android:layout_centerInParent="true"
                 android:numColumns="2" />
 
@@ -75,7 +78,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:text="ages" />
+                android:layout_marginStart="10dp"
+                android:text="ages"
+                android:textSize="14sp"
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/bt_single_page_multi_chosen_ok"
